k8s/base/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: vehicle-resale
  labels:
    app: keycloak
spec:
  type: LoadBalancer
  ports:
  - port: 8180
    targetPort: 8180
    protocol: TCP
    name: http
  selector:
    app: keycloak
